methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:25: error: not found: value faireV
  faireV(Color.YELLOW); forward; left(); faireV(Color.RED); forward; left(); faireV(Color.BLUE); forward; left(); faireV(Color.GREEN); forward; left(); 
  ^PatternPicture:25: error: not found: value faireV
  faireV(Color.YELLOW); forward; left(); faireV(Color.RED); forward; left(); faireV(Color.BLUE); forward; left(); faireV(Color.GREEN); forward; left(); 
                                         ^PatternPicture:25: error: not found: value faireV
  faireV(Color.YELLOW); forward; left(); faireV(Color.RED); forward; left(); faireV(Color.BLUE); forward; left(); faireV(Color.GREEN); forward; left(); 
                                                                             ^PatternPicture:25: error: not found: value faireV
  faireV(Color.YELLOW); forward; left(); faireV(Color.RED); forward; left(); faireV(Color.BLUE); forward; left(); faireV(Color.GREEN); forward; left(); 
                                                                                                                  ^