methods.picture.PatternPicture.scala.code
override def run() {
  for (compteur <-1 to 2) {
    ligne();
  }
}

def ligne() {
  for (compteur <-1 to 2) {
    carre(); 
    for (compteur <- 1 to 6) {
      forward();
    }
  }
  for (compteur <-1 to 15) {
    backward();
  }
  left();
  for (compteur <- 1 to 5) {
    forward();
  }
  right();
}

def carre() {
  faireV(Color.YELLOW); forward; left(); faireV(Color.RED); forward; left(); faireV(Color.BLUE); forward; left(); faireV(Color.GREEN); forward; left(); 
  backward();
}


def faireV1(c:Color) {
    setCouleurBrosse(c); forward(); brushDown(); brushUp(); left(); forward(); left(); forward(); brushDown(); brushUp(); left(); forward(); left(); forward(); forward();
}

def faireV2(c:Color) {
  setCouleurBrosse(c); brushDown(); brushUp(); forward(); left(); forward(); brushDown(); brushUp(); left(); forward(); left(); forward(); left(); forward(); forward();
}
